# bazel-ios-sample

./: .gitignore  BUILD  Brewfile  MODULE.bazel  WORKSPACE
ObjcLib/Classes/: Util.h  Util.m
SwiftLib/: Info.plist
SwiftLib/Classes/: ColorHelper.swift
