module(
    name = "bazel_ios_demo",
    version = "0.0.1",
    repo_name = "bazel_ios_demo",
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "apple_support", version = "1.16.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_xcodeproj", version = "2.4.0")
bazel_dep(name = "rules_swift", version = "1.18.0")
bazel_dep(name = "rules_apple", version = "3.5.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_ios", version = "4.4.0", repo_name = "build_bazel_rules_ios")